--- a/package.json
+++ b/package.json
@@ -9,16 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.0.5",
+    "@portabletext/react": "^2.0.0",
+    "@sanity/image-url": "^1.0.1",
+    "font": "^0.0.4",
+    "framer-motion": "^7.6.5",
     "next": "12.3.1",
+    "next-sanity": "^3.1.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.40.0",
+    "react-icons": "^4.6.0",
+    "react-simple-typewriter": "^4.0.5",
+    "react-social-icons": "^5.15.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.18",
+    "tailwind-scrollbar": "^2.0.1",
+    "tailwindcss": "^3.2.2",
     "typescript": "4.8.4"
   }
 }
