--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@sanity/image-url": "^1.0.1",
     "font": "^0.0.4",
     "framer-motion": "^7.6.5",
-    "next": "12.3.1",
-    "next-sanity": "^3.1.3",
+    "next": "^13.1.1",
+    "next-sanity": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.40.0",
